tests/ui/fallback-impl-with-display.stderr
error: expected attribute arguments in parentheses: #[error(...)]
 --> tests/ui/fallback-impl-with-display.rs:6:3
  |
6 | #[error]
  |   ^^^^^

error[E0119]: conflicting implementations of trait `std::fmt::Display` for type `MyError`
 --> tests/ui/fallback-impl-with-display.rs:5:10
  |
5 | #[derive(Error, Debug)]
  |          ^^^^^ conflicting implementation for `MyError`
...
9 | impl Display for MyError {
  | ------------------------ first implementation here
  |
  = note: this error originates in the derive macro `Error` (in Nightly builds, run with -Z macro-backtrace for more info)
